fixed box coming out of the screen on top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 70vh;
 }
 
 /* Format specifier for the containers on our page */
